update : swaggerconfig -> add endpoint fcm
