# src/routes/tandonRoutes.js
@@ -2,6 +2,7 @@ const express = require("express");
 const router = express.Router();
 const verifyToken = require("../middleware/authMiddleware");
 const tandonController = require("../controller/tandonController");
+const AuthController = require("../controller/authController");
 
 router.post("/", verifyToken, tandonController.store);
 
@@ -12,5 +13,7 @@ router.post("/pair-device/:id", verifyToken, tandonController.pairDevice);
 
 router.patch("/:id", verifyToken, tandonController.update);
 router.delete("/:id", verifyToken, tandonController.destroy);
+router.post("/:id/fcm-token", verifyToken, AuthController.updateFcm);
+router.delete("/:id/fcm-token", verifyToken, AuthController.deleteFcm);
 
 module.exports = router;
